# REIA

./: .dockerignore  .env.example  .flake8  .flaskenv  .gitignore  CLAUDE.md  Dockerfile  LICENSE  MANIFEST.in  MIGRATION_GUIDE.md  PACKAGING_NOTES.md  README.md  cli.py  config.py  conftest.py  database_tests.sh  docker-compose.yml  loss.sql  municipality_borders.py  prepare_testfiles.py  pyproject.toml  pytest.ini  query_map_damage.sql  query_map_injured.sql  read.py  reload_db.sh  requirements-web.txt  requirements.txt  run.py  run_siteid.py  run_test.py  save_scenarios.py  setup.cfg  setup.py  test.py  test_calculation.py  tox.ini  web.sh  write_muni.py  wsgi.py
.github/workflows/: _tests.yml  publish.yml  tests.yml
alembic/: env.py  migration_utils.py  script.py.mako
alembic/versions/: bb9bd27f1af5_initial_database_schema_and_custom_.py
app/: __init__.py  bundles.py  cli.py  database.py
app/blueprints/: __init__.py
app/blueprints/api/: __init__.py  celery_tasks.py  parsers.py  tasks.py  utils.py  views.py
app/blueprints/frontend/: __init__.py  views.py
app/extensions/: __init__.py  celery.py  celery_tasks.py
app/static/css/: styles.css
app/static/js/: index.js
app/templates/: 404.html  exposure.xml  prepare_risk.ini
app/templates/layouts/: base.html
app/tests/: conftest.py  test_test.py
celery/: __init__.py  tasks.py
config/: config.py  config_public.py
core/: actions.py  cli.py  crud.py  database.py  input.py  oqapi.py  parsers.py  utils.py
core/db/: __init__.py  crud.py  scenario.py
core/io/: __init__.py  create_input.py  dstore.py  parse_input.py  parse_output.py  read.py  scenario.py  write.py
core/templates/: exposure.xml  vulnerability.xml
datamodel/: __init__.py  asset.py  base.py  calculation.py  loss.py  lossmodel.py  lossvalues.py  mixins.py  site.py  vulnerability.py
db/: init_database.sh  init_functions.sh  pg_hba.conf  postgresql.conf  postgresql.conf.prod  track_changes.sql
db/functions/: indexes.sql  materialized_loss_buildings.sql  trigger_partition_losstype.sql  trigger_refresh_materialized.sql
docker/: Dockerfile.postgres
model/: assessment.sh  contents_vulnerability.xml  damage.ini  export_gmfs.py  exposure.json  exposure.xml  gmfs_gen.csv  grid.xml  init.sh  job.ini  load_scenario_test.sh  mechanical_fragility_extrapo_complete_supp_T0306_v4_2.xml  prepare_risk.json  risk.ini  risk.json  sites_gen.csv  structural_vulnerability.xml  taxonomy_mapping.csv
model/examples/: exposure.xml  exposure_assets.csv  uncertainty.xml
model/gmfs/: generate_gmfs.py  sites_gen.csv
model/gmfs_from_shakemap/: generate_gmfs.py
model/scenario_sion/: export_gmfs.py  load_scenario_sion.sh
model/scenario_sion/exposure/: Exposure_1km_v03a_CH_modalAmpl_amplAvg.xml
model/scenario_sion/vulnerability/: content_vulnerability_model_V003adjusted_BT.xml  displaced_ST_vulnerability_model_V003adjusted_mean.xml  (+10 more)
model/scenario_test/: exposure_full.xml  load_scenario_test.sh  taxonomy_mapping.csv
model/scenarios/: config.csv  config.json
reia/: __init__.py  actions.py  alembic.ini  api.py  calculation.py  cli.py  oqapi.py  utils.py
reia/alembic/: alembic.ini  env.py
reia/cli/: __init__.py  extensions.py  main.py
reia/config/: __init__.py  csv_settings.json  gunicorn.py  logger.ini  names.py  settings.py
reia/datamodel/: __init__.py  asset.py  base.py  calculations.py  cli.py  exposure.py  fragility.py  lossvalues.py  mixins.py  vulnerability.py
reia/db/: __init__.py  copy.py  crud.py
reia/io/: __init__.py  calculation.py  dstore.py  gmfs.py  read.py  results.py  write.py
reia/repositories/: __init__.py  asset.py  base.py  calculation.py  fragility.py  lossvalue.py  types.py  utils.py  vulnerability.py
reia/schemas/: __init__.py  asset_schemas.py  base.py  calculation_schemas.py  enums.py  exposure_schema.py  fragility_schemas.py  lossvalue_schemas.py  vulnerability_schemas.py
reia/services/: __init__.py  assets.py  calculation.py  creation_info.py  exposure.py  file_generation.py  fragility.py  logger.py  oq_api.py  results.py  risk_assessment.py  riskassessment.py  status_tracker.py  taxonomy.py  vulnerability.py
reia/templates/: exposure.xml  fragility.xml  risk.ini
reia/tests/: conftest.py  database.py  test_api.py  test_cli_smoke.py  test_database_utils.py  test_geometries.py  test_input.py  test_logging.py  test_ria.py  test_webservice.py  test_webservice_utils.py  test_wquantile.py
reia/webservice/: database.py  main.py  schemas.py  utils.py  wquantile.py
settings/: __init__.py  config.py  earthquake.json  logger.ini  oq_settings.ini  oq_settings_sion.ini  scenarios.json
settings/scenarios/: make_config.py  old_scenarios.json
tests/: conftest.py  test_test.py
tests/data/: exposure.json  exposure.xml  risk.json  structural_vulnerability.xml
tests/integration/: conftest.py  test_api_views.py  test_api_views_get.py  test_api_views_post.py  test_create_filepointers.py  test_frontend_views.py
tests/unit/: conftest.py  test_asset.py
ui/: .browserslistrc  .eslintrc.json  babel.config.json  package-lock.json  package.json  webpack.config.js
ui/src/: index.js  style.css
(+65 files in other folders)
