[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["reia*"]

[tool.setuptools]
include-package-data = true

[project]
name = "reia"
version = "1.0.0"
description = "Rapid Earthquake Impact Assessment"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Nicolas Schmid" }]
license = { file = "LICENSE" }
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = "~=3.10"
dependencies = [
    "alembic",
    "fiona<1.10",
    "geoalchemy2",
    "geopandas",
    "Jinja2",
    "numpy<2",
    "openquake.engine==v3.16.7",
    "pandas<1.5",
    "psycopg2",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "requests",
    "shapely>=2.0.0",
    "sqlalchemy",
    "typer",
]

[project.optional-dependencies]
dev = ["flake8", "pytest", "pytest-cov", "pytest-env", "isort"]

[project.scripts]
reia = "reia.cli:app"

[tool.setuptools.package-data]
"*" = ["*.xml", "*.ini"]
"reia" = ["alembic/**/*"]

[tool.pytest.ini_options]
env = [
    "TESTING=1",
]
