[metadata]
name = reia
author = Nicolas Schmid
author_email = nicolas.schmid@sed.ethz.ch
version = 0.1
description = 
long_description = file: README.md, LICENSE
license = GNU AFFERO GENERAL PUBLIC LICENSE Version 3
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    typer

[options.entry_points]
console_scripts =
    reia = reia.cli:app

[flake8]
select = E,F,W
max_line_length = 80
ignore = E402, W503
exclude =
  .git,
  .tox,
  .eggs,
  .config,
  *.egg-info,
  __pycache__,
  .pytest_cache,
  env,
