[metadata]
name = reia
author = Nicolas Schmid
author_email = nicolas.schmid@sed.ethz.ch
version = 0.1
description = 
long_description = file: README.md, LICENSE
license = GNU AFFERO GENERAL PUBLIC LICENSE Version 3
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.10
packages = find:
install_requires =
    fiona<1.10
    geoalchemy2
    geopandas
    Jinja2
    numpy<2.0.0
    openquake.engine @ git+https://github.com/gem/oq-engine.git@engine-3.16
    pandas<=1.3.5
    psycopg2
    python-dotenv
    requests
    shapely>=2.0.0
    sqlalchemy
    typer

[options.extras_require]
dev =
    autopep8
    flake8
    pytest
    pytest-cov
    pytest-env

[options.entry_points]
console_scripts =
    reia = reia.cli:app

[options.package_data]
* =
  *.xml
  *.ini
  
[flake8]
select = E,F,W
max_line_length = 80
ignore = E402, W503
exclude =
  .git,
  .tox,
  .eggs,
  .config,
  *.egg-info,
  __pycache__,
  .pytest_cache,
  env,
